# vine-demo-app

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_AI_PROMPT.md  Dockerfile  docker-compose.yml  docker-entrypoint.sh  dremio-docker-compose.yml  makefile  pyproject.toml  readme.md  requirements-dev.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  package.yml  test.yml
docs/: container.md  dremio-parameter-binding-analysis.md  dremio-sqlmodel-solutions.md  testing-dremio-versions.md
docs/dremio-parameter-binding/: README.md  dremio-parameter-binding-analysis.md  dremio-sqlmodel-limitations.md  forum-post.md  forum-response.md  testing-dremio-versions.md  testing-v26-results.md
examples/: list_fibery_types.py
scripts/: generate_test_project_from_template.sh  test_generated_project_docker.sh  test_generated_project_web.sh  test_template.sh  test_template_docker.sh  test_template_web.sh  test_template_web_docker.sh
src/vineapp/: __cli__.py  __main__.py  __web__.py  app_info.py  article_router.py  config.py  menu.py  products.py  test_cli.py  theme.py
src/vineapp/fibery/: graphql.py  models.py
src/vineapp/products/: __init__.py  models.py  service.py
src/vineapp/web/: startup.py
src/vineapp/web/components/: __init__.py  menu.py  message.py  model_card.py  styles.py  theme.py
src/vineapp/web/pages/: __init__.py  about.py  articles.py  database.py  home.py  kb.py  products.py
template/: .flake8  ARCHITECTURE.md  README.md  cookiecutter.json
template/{{cookiecutter.project_slug}}/: .env.example  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_AI_PROMPT.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  makefile  pyproject.toml  requirements-dev.txt
template/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  package.yml
template/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __cli__.py  __init__.py  __web__.py  app_info.py
template/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/products/: __init__.py  models.py
template/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/web/: startup.py
template/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/web/components/: __init__.py  menu.py  message.py  theme.py
template/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/web/pages/: __init__.py  home.py  products.py
template/{{cookiecutter.project_slug}}/tests/: test_cli.py  test_products_models.py  test_products_repository.py
template/{{cookiecutter.project_slug}}/tests/web/: conftest.py  test_components.py  test_products.py
tests/: conftest.py  test_cli.py  test_config.py  test_core.py  test_fibery_graphql.py  test_fibery_models.py  test_products.py  test_products_cli.py  test_web.py  test_web_about.py  test_web_articles.py
tests/integration/: conftest.py  test_dremio_connection.py  test_products.py  test_products_ideal.py
tests/web/: conftest.py  test_about.py  test_components.py  test_home.py  test_kb.py  test_products.py
work/: backlog.md  doing.md  done.md
