[project]
name = "vineapp"
description = "Serra Vine demo application"
authors = [
    { name = "Marijn van der Zee", email = "marijn@serraict.com" },
    { name = "claude-sonnet-3.5-beta", email = "marijn+ai@serraict.com" },
]
requires-python = ">=3.10"
urls = { "project" = "https://github.com/serraict/vine-demo-app", "docs" = "https://github.com/serraict/vine-demo-app/blob/main/README.md" }
dependencies = ["nicegui"]
dynamic = ["version"]
license.file = "LICENCE"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project.scripts]
app = "vineapp:__main__.main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
