[project]
name = "vineapp"
description = "Serra Vine demo application"
authors = [
    { name = "Marijn van der Zee", email = "marijn@serraict.com" },
    { name = "claude-sonnet-3.5-beta", email = "marijn+ai@serraict.com" },
]
requires-python = ">=3.10"
urls = { "project" = "https://github.com/serraict/vine-demo-app", "docs" = "https://github.com/serraict/vine-demo-app/blob/main/README.md" }
dependencies = [
    "nicegui",
    "typer",
    "sqlmodel",
    "rich",
    "sqlalchemy-dremio",
    "pyarrow",
    "pandas",
]
dynamic = ["version"]
license.file = "LICENCE"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project.scripts]
#webapp = "vineapp.__web__:main"
cliapp = "vineapp.__cli__:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "asyncio: mark test as async",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-p nicegui.testing.user_plugin"
filterwarnings = [
    # Ignore HTTPX deprecation warning from NiceGUI testing plugin
    "ignore:The 'app' shortcut is now deprecated:DeprecationWarning:httpx",
]

[tool.mdformat]
wrap = 80
number = false
end_of_line = "lf"

[tool.mdformat.plugins]
gfm = { task_list_item = true }