[project]
name = "{{cookiecutter.project_slug}}"
description = "{{cookiecutter.project_description}}"
authors = [
    { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" },
]
requires-python = ">=3.10"
dependencies = [
    "typer",
    "rich",
]
dynamic = ["version"]
license.file = "LICENSE"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project.scripts]
cliapp = "{{cookiecutter.project_slug}}.__cli__:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
